Overflow work's pictures fixed

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header {
   justify-content: space-between;
   align-items: center;
   margin: 0;
+  z-index: 1;
 }
 
 nav {
